Fix layout issues after merge

--- a/client/main.css
+++ b/client/main.css
@@ -1,13 +1,16 @@
-/* CSS declarations go here */
-.bubble {
-  border: 1px solid #ececec;
-  border-radius: 5px;
-  padding: 8px;
-  background: #ececec;
-  width: 80%;
-  display: inline-block;
+* {
+  box-sizing: border-box;
 }
 
-.userImg {
-  display: inline-block;
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%;
+  font-size: 14px;
+  line-height: 20px;
+  color: rgba(86, 86, 86, 1.0);
+  background-color: white;
+  -webkit-font-smoothing: antialiased;
+  font-family: helvetica, arial, sans-serif;
 }
